[gd_scene load_steps=15 format=2]

[ext_resource path="res://Managing/Colliders/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Enemies/Scientists/FishBlaster/Fish.gd" type="Script" id=2]
[ext_resource path="res://Entities/Enemies/Scientists/FishBlaster/Fish.png" type="Texture" id=3]
[ext_resource path="res://Items/Weapons/Bullet/Lights/bulletLight1.png" type="Texture" id=4]
[ext_resource path="res://Items/Weapons/Bullet/bulletParticles.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.715481, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -5.70341, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 16.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 9 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Animation" id=1]
resource_name = "Kill"
tracks/0/type = "value"
tracks/0/path = NodePath(".:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Light:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="Bullet" type="KinematicBody2D" groups=["EnemyBullet"]]
collision_layer = 4
collision_mask = 4
script = ExtResource( 2 )

[node name="FloorRC" type="RayCast2D" parent="."]
enabled = true

[node name="Particles" type="Particles2D" parent="."]
material = SubResource( 7 )
emitting = false
amount = 25
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Particles"]
anims/Kill = SubResource( 1 )

[node name="Light" type="Sprite" parent="."]
visible = false
modulate = Color( 2.89, 0, 0, 1 )
show_behind_parent = true
material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 3 )
hframes = 2

[node name="Lifetime" type="Timer" parent="."]
wait_time = 3.0

[node name="Hitbox" parent="." groups=["EnemyBullet"] instance=ExtResource( 1 )]
visible = false
collision_layer = 4
collision_mask = 2
damage = 1
giveSelf = true

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="QueueArea" type="Area2D" parent="." groups=["EnemyBullet"]]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="QueueArea"]
shape = SubResource( 4 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Init"
anims/Init = SubResource( 5 )

[connection signal="timeout" from="Lifetime" to="." method="queue_free"]
[connection signal="hit_object" from="Hitbox" to="." method="_on_Hitbox_hit_object"]
[connection signal="body_entered" from="QueueArea" to="." method="_on_QueueArea_body_entered"]

[editable path="Hitbox"]
